--- a/components/agility-pageModules/embedVideo/embedVideo.module.scss
+++ b/components/agility-pageModules/embedVideo/embedVideo.module.scss
@@ -11,7 +11,7 @@
     .embed {
       width: 100%;
       padding: 1rem;
-      box-shadow: -1px 0 0.75rem 0.5rem rgb(0 0 0 / 15%);
+      box-shadow: -0.0625rem 0 0.75rem 0.5rem rgb(0 0 0 / 15%);
       background-color: $color-white;
       border-radius: 0.85rem;
       iframe {
