--- a/components/agility-pageModules/logosList/logosList.module.scss
+++ b/components/agility-pageModules/logosList/logosList.module.scss
@@ -32,7 +32,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    min-height: 100px;
+    min-height: 6.25rem;
     & > div {
       &:only-child {
         height: 100%;
