--- a/components/agility-pageModules/resourceContent/resourceContent.module.scss
+++ b/components/agility-pageModules/resourceContent/resourceContent.module.scss
@@ -7,7 +7,7 @@
 .form {
   background: $color-purple;
   padding: 1rem;
-  min-height: 600px;
+  min-height: 37.5rem;
   border-radius: 1rem;
   @include desktop() {
     padding: 3rem;
