--- a/components/agility-pageModules/speakerList/speakerList.module.scss
+++ b/components/agility-pageModules/speakerList/speakerList.module.scss
@@ -35,7 +35,7 @@
           &:first-child {
             border-radius: 50%;
             img {
-              max-width: 263px !important;
+              max-width: 16.4375rem !important;
               min-width: unset !important;
               width: unset !important;
               height: unset !important;
