--- a/components/form/formLoader.module.scss
+++ b/components/form/formLoader.module.scss
@@ -21,7 +21,7 @@
     &:last-child {
       margin-top: 2rem;
       border-radius: 3rem;
-      max-width: 200px;
+      max-width: 12.5rem;
       min-height: 3.3125rem;
     }
   }
