--- a/components/layout/footer/footer.module.scss
+++ b/components/layout/footer/footer.module.scss
@@ -24,7 +24,7 @@
 
   .container {
     width: 100%;
-    max-width: 1284px;
+    max-width: 80.25rem;
     padding: 0 1rem;
     margin: 0 auto;
   }
