--- a/styles/agility-pageModules/_newsList.scss
+++ b/styles/agility-pageModules/_newsList.scss
@@ -11,7 +11,7 @@
     grid-template-columns: repeat(3, 1fr);
     &__article {
       > * {
-        max-width: calc(33% - 30px);
+        max-width: calc(33% - 1.875rem);
       }
       .genericCard {
         &__textContent {
@@ -52,8 +52,8 @@
       justify-content: center;
       align-items: center;
       .newsArticle {
-        width: calc(33% - 30px);
-        min-width: 340px;
+        width: calc(33% - 1.875rem);
+        min-width: 21.25rem;
       }
     }
     @include mobile() {
