--- a/styles/components/_genericCard.scss
+++ b/styles/components/_genericCard.scss
@@ -1,6 +1,6 @@
 .genericCard {
   height: 40vh;
-  min-height: 400px;
+  min-height: 25rem;
   border-radius: 1rem;
   @include shadow();
   display: flex;
@@ -14,8 +14,8 @@
   &__image {
     background: $color-gray;
     flex: 1;
-    max-height: 200px;
-    min-height: 170px;
+    max-height: 12.5rem;
+    min-height: 10.625rem;
     overflow: hidden;
     border-top-left-radius: 1rem;
     border-top-right-radius: 1rem;
