--- a/styles/settings/_variables.scss
+++ b/styles/settings/_variables.scss
@@ -1,11 +1,11 @@
 $navbar-height: 5rem;
-$desktop: 890px;
-$touch: $desktop - 1px;
-$tablet: 768px;
-$mobile: 480px;
+$desktop: 55.625rem;
+$touch: $desktop - 0.0625rem;
+$tablet: 48rem;
+$mobile: 30rem;
 $fullhd: 1920px;
-$very-narrow: 580px;
-$medium: 1366px;
+$very-narrow: 36.25rem;
+$medium: 85.375rem;
 $wide: $fullhd;
 
 // rem-sizes
