--- a/components/agility-pageModules/infographic/infographic.module.scss
+++ b/components/agility-pageModules/infographic/infographic.module.scss
@@ -6,7 +6,10 @@
   .content {
     display: grid;
     width: 100%;
-    grid-template-columns: repeat(auto-fill, minmax(max(100px, 100% / 6), 1fr));
+    grid-template-columns: repeat(
+      auto-fill,
+      minmax(max(6.25rem, 100% / 6), 1fr)
+    );
     @include touch() {
       gap: 1rem;
       .item {
@@ -16,7 +19,7 @@
     &.is2 {
       grid-template-columns: repeat(
         auto-fill,
-        minmax(max(250px, 100% / 2), 1fr)
+        minmax(max(15.625rem, 100% / 2), 1fr)
       );
       .item {
         &:first-child {
@@ -28,24 +31,24 @@
     &.is3 {
       grid-template-columns: repeat(
         auto-fill,
-        minmax(max(225px, 100% / 3), 1fr)
+        minmax(max(14.0625rem, 100% / 3), 1fr)
       );
     }
     &.is4 {
       grid-template-columns: repeat(
         auto-fill,
-        minmax(max(200px, 100% / 4), 1fr)
+        minmax(max(12.5rem, 100% / 4), 1fr)
       );
     }
     &.is5 {
       grid-template-columns: repeat(
         auto-fill,
-        minmax(max(175px, 100% / 5), 1fr)
+        minmax(max(10.9375rem, 100% / 5), 1fr)
       );
     }
 
     &.boxStyle {
-      box-shadow: 4px 4px 20px hsla(0, 0%, 49.8%, 0.15);
+      box-shadow: 0.25rem 0.25rem 1.25rem hsla(0, 0%, 49.8%, 0.15);
       padding: 5rem 4rem;
       .item {
         &:first-child {
