--- a/components/agility-pageModules/resourceList/resourceList.module.scss
+++ b/components/agility-pageModules/resourceList/resourceList.module.scss
@@ -14,7 +14,7 @@
     grid-template-columns: repeat(3, 1fr);
     .resource {
       > * {
-        max-width: calc(33% - 30px);
+        max-width: calc(33% - 1.875rem);
       }
     }
     @include touch() {
@@ -23,8 +23,8 @@
       justify-content: center;
       align-items: center;
       .resource {
-        width: calc(33% - 30px);
-        min-width: 340px;
+        width: calc(33% - 1.875rem);
+        min-width: 21.25rem;
       }
     }
     @include mobile() {
