--- a/components/agility-pageModules/searchPageContent/searchPageContent.module.scss
+++ b/components/agility-pageModules/searchPageContent/searchPageContent.module.scss
@@ -68,7 +68,9 @@
     & > div {
       border: 0.0625rem solid $color-gray;
       border-radius: 1rem;
-      max-height: 12rem;
+      @include desktop() {
+        max-height: 12rem;
+      }
       a {
         padding: 0.75rem 1.25rem;
         display: block;
