--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -321,6 +321,9 @@
   margin-top: $size-6 !important;
 }
 
+.mb-0 {
+  margin-bottom: 0 !important;
+}
 .mb-1 {
   margin-bottom: $size-1 !important;
 }
