--- a/styles/main.scss
+++ b/styles/main.scss
@@ -8,6 +8,7 @@
 @import "layout";
 @import "animations";
 @import "./components/__components-dir";
+@import "./pages/__pages-dir";
 @import "./agility-pageModules/__agility-pageModules-dir";
 @import "./settings/reset";
 
