--- a/components/agility-pageModules/firstFold/firstFold.module.scss
+++ b/components/agility-pageModules/firstFold/firstFold.module.scss
@@ -80,6 +80,9 @@
     border-radius: 3em;
     border-width: 0.15em;
   }
+  .imageLink {
+    display: block;
+  }
   // resets for large screen sizes
   @include desktop() {
     .textContent {
