--- a/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
+++ b/components/agility-pageModules/clientTestimonial/clientTestimonial.module.scss
@@ -35,9 +35,9 @@
       justify-content: center;
       align-items: center;
       text-align: center;
+      flex-direction: column;
       .awardImage {
         max-width: 12.5rem;
-        margin-right: 3.5rem;
         img {
           width: unset !important;
           height: unset !important;
@@ -78,6 +78,12 @@
         .client {
           font-size: 1rem;
           line-height: 1.2;
+        }
+      }
+      @include desktop() {
+        flex-direction: row;
+        .awardImage {
+          margin-right: 3.5rem;
         }
       }
     }
