--- a/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
+++ b/components/agility-pageModules/textWithMedia/textWithMedia.module.scss
@@ -4,6 +4,10 @@
 .textWithMedia {
   .heading {
     margin-bottom: 2rem;
+    @include touch() {
+      margin-top: 1rem;
+      margin-bottom: 1rem;
+    }
   }
   .content {
     display: flex;
@@ -76,9 +80,13 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    & > div {
+    div {
       &:only-child {
+        height: 100%;
         width: 100%;
+        img {
+          object-fit: contain;
+        }
       }
     }
     @include touch() {
