--- a/components/layout/navbar/search.module.scss
+++ b/components/layout/navbar/search.module.scss
@@ -4,7 +4,6 @@
 @import "../../../styles/settings/variables";
 
 .searchContainer {
-  padding-bottom: 1rem;
   position: absolute;
   top: 0;
   left: 0;
@@ -58,7 +57,7 @@
         width: 100%;
         height: 100%;
         display: grid;
-        grid-template-columns: 80% 10% 10%;
+        grid-template-columns: calc(100% - 4rem) 2rem 2rem;
         position: relative;
         padding: 0 0.5rem;
         input {
@@ -193,10 +192,11 @@
       }
     }
     .searchButton {
-      position: relative;
+      position: absolute;
       cursor: pointer;
 
       @include desktop() {
+        position: relative;
         padding: 1rem;
       }
 
