--- a/components/starRating/starRating.module.scss
+++ b/components/starRating/starRating.module.scss
@@ -1,4 +1,8 @@
+@import "../../styles/settings/mixins";
 .starRating {
+  @include touch() {
+    text-align: center;
+  }
   img {
     margin: 0 0.25rem;
   }
