--- a/styles/settings/_fonts.scss
+++ b/styles/settings/_fonts.scss
@@ -105,3 +105,22 @@
   font-style: normal;
   font-display: block;
 }
+
+$size-50px: toRem(50);
+$size-40px: toRem(40);
+$size-38px: toRem(38);
+$size-36px: toRem(36);
+$size-32px: toRem(32);
+$size-30px: toRem(30);
+$size-28px: toRem(28);
+$size-26px: toRem(26);
+$size-22px: toRem(22);
+$size-20px: toRem(20);
+$size-18px: toRem(18);
+$size-16px: toRem(16);
+$size-15px: toRem(15);
+$size-14px: toRem(14);
+$size-13px: toRem(13);
+$size-12px: toRem(12);
+$size-10px: toRem(10);
+$size-8px: toRem(8);
