--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -185,6 +185,22 @@
       &.is-7 {
         flex: 0 0 calc(14.2857% - 0.5rem);
       }
+      // we want larger gap in some cases
+      &.is-2-larger-gap {
+        flex: 0 0 calc(50% - 2rem);
+      }
+      &.is-3-larger-gap {
+        flex: 0 0 calc(33.3333% - 2rem);
+      }
+      &.is-4-larger-gap {
+        flex: 0 0 calc(25% - 2rem);
+      }
+      &.is-5-larger-gap {
+        flex: 0 0 calc(20% - 2rem);
+      }
+      &.is-7-larger-gap {
+        flex: 0 0 calc(14.2857% - 2rem);
+      }
     }
   }
 }
