--- a/styles/layout.scss
+++ b/styles/layout.scss
@@ -458,6 +458,9 @@
 .pb-3 {
   padding-bottom: $size-3 !important;
 }
+.pb-4 {
+  padding-bottom: $size-4 !important;
+}
 .pb-6 {
   padding-bottom: $size-6 !important;
 }
