--- a/styles/marketo.scss
+++ b/styles/marketo.scss
@@ -1,3 +1,5 @@
+@import "./settings/mixins";
+@import "./settings/colors";
 .mktoAsterix {
   color: $color-red;
   margin-right: 0.5rem;
@@ -71,7 +73,7 @@
     font-size: 1.2rem;
     font-weight: 400;
     margin-top: 1.5rem;
-    padding: 0.5rem 1.5rem;
+    padding: toRem(15) toRem(30);
     color: $color-white;
     border-color: $color-orange;
     background-color: $color-orange;
